--- a/bank.html
+++ b/bank.html
@@ -18,15 +18,15 @@
         <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto">
           <div class="bg-green-400 p-8 rounded-xl">
             <h4 class="text-2xl mb-2">Deposit</h4>
-            <h2 class="text-5xl">$00</h2>
+            <h2 class="text-5xl">$<span id="deposit-total">00</span></h2>
           </div>
           <div class="bg-yellow-400 p-8 rounded-xl">
             <h4 class="text-2xl mb-2">Withdraw</h4>
-            <h2 class="text-5xl">$00</h2>
+            <h2 class="text-5xl">$<span id="withdraw-total">00</span></h2>
           </div>
           <div class="bg-violet-400 p-8 rounded-xl">
             <h4 class="text-2xl mb-2">Balance</h4>
-            <h2 class="text-5xl">$1240</h2>
+            <h2 class="text-5xl">$<span id="balance-total">1240</span></h2>
           </div>
         </div>
       </section>
@@ -43,7 +43,7 @@
               placeholder="$ Amount you want to deposit"
             />
             <button
-              id="btn-submit"
+              id="btn-deposit"
               class="bg-blue-600 px-4 py-2 rounded-md text-white font-semibold hover:bg-blue-700"
             >
               Deposit
@@ -56,11 +56,11 @@
               class="block mb-3 w-9/12 p-3 rounded-md"
               type="text"
               name=""
-              id="deposit-field"
+              id="withdraw-field"
               placeholder="$ Amount you want to withdraw"
             />
             <button
-              id="btn-submit"
+              id="btn-withdraw"
               class="text-white bg-blue-600 px-4 py-2 rounded-md text-white font-semibold hover:bg-blue-700"
             >
               Withdraw
@@ -69,5 +69,7 @@
         </div>
       </section>
     </main>
+    <script src="./js/deposit.js"></script>
+    <script src="./js/withdraw.js"></script>
   </body>
 </html>
